--- a/Day41/HTML - Personal Site/HTML - Personal Site/index.html
+++ b/Day41/HTML - Personal Site/HTML - Personal Site/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Site</title>
 </head>
 <body>
-    
+    <h1>Jang Jungwoo</h1>
+    <p><em>Intern of <strong>KICT</strong></em></p>
+    <p>I am a student.</p>
+    <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>Chonnam National University of Architecture</li>
+        <li>Architecture Engineering & English Language and Literature</li>
 </body>
 </html>
