--- a/Day41/class.html
+++ b/Day41/class.html
@@ -7,3 +7,7 @@
 <h2>Arthur Conan Doyle</h2>
 <hr size="3" noshade="">
 </center>
+
+<img src="img_source">
+
+<a href="Destination url">This is a hyperlink.</a>
